force-app/main/default/objects/ssot__ProblemRelatedItem__dlm/fields/ssot__ProblemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemId__c</fullName>
    <label>Problem</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>