force-app/main/default/objects/ssot__ProblemRelatedItem__dlm/fields/ssot__ProblemItemImpact__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemItemImpact__c</fullName>
    <label>Problem Item Impact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemItemImpact</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>