force-app/main/default/objects/ssot__ProblemRelatedItem__dlm/fields/ssot__ProblemRelatedItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemRelatedItemNumber__c</fullName>
    <label>Problem Related Item Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemRelatedItemNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>