force-app/main/default/objects/ssot__ProblemRelatedItem__dlm/fields/ssot__rel_1702009441461_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009441461_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProblemRelatedItem_ProblemId_map_Pro_rel</label>
    <referenceTo>ssot__Problem__dlm</referenceTo>
    <relationshipLabel>ProblemRelatedItem_ProblemId_map_Pro_rel</relationshipLabel>
    <relationshipName>rel_1702009441461_end</relationshipName>
    <type>Lookup</type>
</CustomField>