force-app/main/default/objects/ssot__ProblemRelatedItem__dlm/fields/ssot__rel_1702009442442_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009442442_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProblemRelatedItem_RelatedReferenceI_rel</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>ProblemRelatedItem_RelatedReferenceI_rel</relationshipLabel>
    <relationshipName>rel_1702009442442_end</relationshipName>
    <type>Lookup</type>
</CustomField>